// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`open api parser superagent docs 1`] = `
{
  "definitionFiles": {
    "agent.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "createAgent": {
            "auth": true,
            "display-name": "Create Agent",
            "docs": "Create a new agent",
            "errors": [
              "root.CreateAgentApiV1AgentsPostRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "request": {
                  "name": "name",
                  "type": "type",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/api/v1/agents",
            "request": {
              "body": {
                "properties": {
                  "documentId": "optional<string>",
                  "has_memory": {
                    "default": false,
                    "type": "optional<boolean>",
                  },
                  "llm": "optional<map<string, unknown>>",
                  "name": "string",
                  "promptId": "optional<string>",
                  "toolId": "optional<string>",
                  "type": "string",
                },
              },
              "headers": undefined,
              "name": "Agent",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "deleteAgent": {
            "auth": true,
            "display-name": "Delete Agent",
            "docs": "Delete a specific agent",
            "errors": [
              "root.DeleteAgentApiV1AgentsAgentIdDeleteRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "agentId": "agentId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "DELETE",
            "pagination": undefined,
            "path": "/api/v1/agents/{agentId}",
            "path-parameters": {
              "agentId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "getAgent": {
            "auth": true,
            "display-name": "Get Agent",
            "docs": "Get a specific agent",
            "errors": [
              "root.GetAgentApiV1AgentsAgentIdGetRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "agentId": "agentId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/agents/{agentId}",
            "path-parameters": {
              "agentId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "listAllAgents": {
            "auth": true,
            "display-name": "List All Agents",
            "docs": "List all agents",
            "examples": [
              {
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/agents",
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "patchAgent": {
            "auth": true,
            "display-name": "Patch Agent",
            "docs": "Patch a specific agent",
            "errors": [
              "root.PatchAgentApiV1AgentsAgentIdPatchRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "agentId": "agentId",
                },
                "request": {
                  "key": "value",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "PATCH",
            "pagination": undefined,
            "path": "/api/v1/agents/{agentId}",
            "path-parameters": {
              "agentId": "string",
            },
            "request": {
              "body": "map<string, unknown>",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "promptAgent": {
            "auth": true,
            "display-name": "Prompt Agent",
            "docs": "Invoke a specific agent",
            "errors": [
              "root.PromptAgentApiV1AgentsAgentIdPredictPostRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "agentId": "agentId",
                },
                "request": {
                  "input": {
                    "key": "value",
                  },
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/api/v1/agents/{agentId}/predict",
            "path-parameters": {
              "agentId": "string",
            },
            "request": {
              "body": {
                "properties": {
                  "has_streaming": {
                    "default": false,
                    "type": "optional<boolean>",
                  },
                  "input": "map<string, unknown>",
                },
              },
              "headers": undefined,
              "name": "PredictAgent",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
        },
      },
    },
    "apiToken.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "createApiToken": {
            "auth": true,
            "display-name": "Create Api Token",
            "docs": "Create a new API token",
            "errors": [
              "root.CreateApiTokenApiV1ApiTokensPostRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "request": {
                  "description": "description",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/api/v1/api-tokens",
            "request": {
              "body": {
                "properties": {
                  "description": "string",
                },
              },
              "headers": undefined,
              "name": "ApiToken",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "deleteApiToken": {
            "auth": true,
            "display-name": "Delete Api Token",
            "docs": "Delete a specific API token",
            "errors": [
              "root.DeleteApiTokenApiV1ApiTokensTokenIdDeleteRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "tokenId": "tokenId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "DELETE",
            "pagination": undefined,
            "path": "/api/v1/api-tokens/{tokenId}",
            "path-parameters": {
              "tokenId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "getApiToken": {
            "auth": true,
            "display-name": "Get Api Token",
            "docs": "Get a specific API token",
            "errors": [
              "root.GetApiTokenApiV1ApiTokensTokenIdGetRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "tokenId": "tokenId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/api-tokens/{tokenId}",
            "path-parameters": {
              "tokenId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "listApiTokens": {
            "auth": true,
            "display-name": "List Api Tokens",
            "docs": "List all API tokens",
            "examples": [
              {
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/api-tokens",
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
        },
      },
    },
    "auth.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "signIn": {
            "auth": false,
            "display-name": "Sign In",
            "docs": undefined,
            "errors": [
              "root.SignInApiV1AuthSignInPostRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "request": {
                  "email": "email",
                  "password": "password",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/api/v1/auth/sign-in",
            "request": {
              "body": {
                "properties": {
                  "email": "string",
                  "password": "string",
                },
              },
              "headers": undefined,
              "name": "SignIn",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "signUp": {
            "auth": false,
            "display-name": "Sign Up",
            "docs": undefined,
            "errors": [
              "root.SignUpApiV1AuthSignUpPostRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "request": {
                  "email": "email",
                  "password": "password",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/api/v1/auth/sign-up",
            "request": {
              "body": {
                "properties": {
                  "email": "string",
                  "metadata": "optional<map<string, unknown>>",
                  "name": "optional<string>",
                  "password": "string",
                },
              },
              "headers": undefined,
              "name": "SignUp",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
        },
      },
    },
    "documents.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "createDocument": {
            "auth": true,
            "display-name": "Create Document",
            "docs": "Create a new document",
            "errors": [
              "root.CreateDocumentApiV1DocumentsPostRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "request": {
                  "name": "name",
                  "type": "type",
                  "url": "url",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/api/v1/documents",
            "request": {
              "body": {
                "properties": {
                  "authorization": "optional<map<string, unknown>>",
                  "from_page": {
                    "default": [
                      1,
                    ],
                    "type": "optional<integer>",
                  },
                  "name": "string",
                  "splitter": "optional<map<string, unknown>>",
                  "to_page": "optional<integer>",
                  "type": "string",
                  "url": "string",
                },
              },
              "headers": undefined,
              "name": "Document",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "deleteDocument": {
            "auth": true,
            "display-name": "Delete Document",
            "docs": "Delete a specific document",
            "errors": [
              "root.DeleteDocumentApiV1DocumentsDocumentIdDeleteRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "documentId": "documentId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "DELETE",
            "pagination": undefined,
            "path": "/api/v1/documents/{documentId}",
            "path-parameters": {
              "documentId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "getDocument": {
            "auth": true,
            "display-name": "Get Document",
            "docs": "Get a specific document",
            "errors": [
              "root.GetDocumentApiV1DocumentsDocumentIdGetRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "documentId": "documentId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/documents/{documentId}",
            "path-parameters": {
              "documentId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "listDocuments": {
            "auth": true,
            "display-name": "List Documents",
            "docs": "List all documents",
            "examples": [
              {
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/documents",
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
        },
      },
    },
    "prompts.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "createAPrompt": {
            "auth": true,
            "display-name": "Create A Prompt",
            "docs": "Create a new prompt",
            "errors": [
              "root.CreateAPromptApiV1PromptsPostRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "request": {
                  "input_variables": [],
                  "name": "name",
                  "template": "template",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/api/v1/prompts",
            "request": {
              "body": {
                "properties": {
                  "input_variables": "list<unknown>",
                  "name": "string",
                  "template": "string",
                },
              },
              "headers": undefined,
              "name": "Prompt",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "deletePrompt": {
            "auth": true,
            "display-name": "Delete Prompt",
            "docs": "Delete a specific prompt",
            "errors": [
              "root.DeletePromptApiV1PromptsPromptIdDeleteRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "promptId": "promptId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "DELETE",
            "pagination": undefined,
            "path": "/api/v1/prompts/{promptId}",
            "path-parameters": {
              "promptId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "getPrompt": {
            "auth": true,
            "display-name": "Get Prompt",
            "docs": "Get a specific prompt",
            "errors": [
              "root.GetPromptApiV1PromptsPromptIdGetRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "promptId": "promptId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/prompts/{promptId}",
            "path-parameters": {
              "promptId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "listPrompts": {
            "auth": true,
            "display-name": "List Prompts",
            "docs": "List all prompts",
            "examples": [
              {
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/prompts",
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "patchPrompt": {
            "auth": true,
            "display-name": "Patch Prompt",
            "docs": "Patch a specific prompt",
            "errors": [
              "root.PatchPromptApiV1PromptsPromptIdPatchRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "promptId": "promptId",
                },
                "request": {
                  "key": "value",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "PATCH",
            "pagination": undefined,
            "path": "/api/v1/prompts/{promptId}",
            "path-parameters": {
              "promptId": "string",
            },
            "request": {
              "body": "map<string, unknown>",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
        },
      },
    },
    "tools.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "createATool": {
            "auth": true,
            "display-name": "Create A Tool",
            "docs": "Create a new tool",
            "errors": [
              "root.CreateAToolApiV1ToolsPostRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "request": {
                  "name": "name",
                  "type": "type",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/api/v1/tools",
            "request": {
              "body": {
                "properties": {
                  "authorization": "optional<map<string, unknown>>",
                  "name": "string",
                  "type": "string",
                },
              },
              "headers": undefined,
              "name": "Tool",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "deleteTool": {
            "auth": true,
            "display-name": "Delete Tool",
            "docs": "Delete a specific tool",
            "errors": [
              "root.DeleteToolApiV1ToolsToolIdDeleteRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "toolId": "toolId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "DELETE",
            "pagination": undefined,
            "path": "/api/v1/tools/{toolId}",
            "path-parameters": {
              "toolId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "getTool": {
            "auth": true,
            "display-name": "Get Tool",
            "docs": "Get a specific tool",
            "errors": [
              "root.GetToolApiV1ToolsToolIdGetRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "toolId": "toolId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/tools/{toolId}",
            "path-parameters": {
              "toolId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "listTools": {
            "auth": true,
            "display-name": "List Tools",
            "docs": "List all tools",
            "examples": [
              {
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/tools",
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
        },
      },
    },
    "traces.yml": {
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "listAgentTraces": {
            "auth": true,
            "display-name": "List Agent Traces",
            "docs": "List all agent traces",
            "examples": [
              {
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/traces",
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
        },
      },
    },
    "user.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "readUser": {
            "auth": false,
            "display-name": "Read User",
            "docs": undefined,
            "errors": [
              "root.ReadUserApiV1UsersUserIdGetRequestUnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "userId": "userId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/users/{userId}",
            "path-parameters": {
              "userId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "readUserMe": {
            "auth": true,
            "display-name": "Read User Me",
            "docs": undefined,
            "examples": [
              {
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/users/me",
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
        },
      },
    },
  },
  "packageMarkerFile": {
    "errors": {
      "CreateAPromptApiV1PromptsPostRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "CreateAToolApiV1ToolsPostRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "CreateAgentApiV1AgentsPostRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "CreateApiTokenApiV1ApiTokensPostRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "CreateDocumentApiV1DocumentsPostRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "DeleteAgentApiV1AgentsAgentIdDeleteRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "DeleteApiTokenApiV1ApiTokensTokenIdDeleteRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "DeleteDocumentApiV1DocumentsDocumentIdDeleteRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "DeletePromptApiV1PromptsPromptIdDeleteRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "DeleteToolApiV1ToolsToolIdDeleteRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "GetAgentApiV1AgentsAgentIdGetRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "GetApiTokenApiV1ApiTokensTokenIdGetRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "GetDocumentApiV1DocumentsDocumentIdGetRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "GetPromptApiV1PromptsPromptIdGetRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "GetToolApiV1ToolsToolIdGetRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "PatchAgentApiV1AgentsAgentIdPatchRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "PatchPromptApiV1PromptsPromptIdPatchRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "PromptAgentApiV1AgentsAgentIdPredictPostRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "ReadUserApiV1UsersUserIdGetRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "SignInApiV1AuthSignInPostRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
      "SignUpApiV1AuthSignUpPostRequestUnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
    },
    "types": {
      "HTTPValidationError": {
        "docs": undefined,
        "properties": {
          "detail": "optional<list<ValidationError>>",
        },
      },
      "ValidationError": {
        "docs": undefined,
        "properties": {
          "loc": "list<ValidationErrorLocItem>",
          "msg": "string",
          "type": "string",
        },
      },
      "ValidationErrorLocItem": {
        "discriminated": false,
        "docs": undefined,
        "union": [
          "string",
          "integer",
        ],
      },
    },
  },
  "rootApiFile": {
    "auth": "BearerAuthScheme",
    "auth-schemes": {
      "BearerAuthScheme": {
        "scheme": "bearer",
      },
    },
    "display-name": "Superagent",
    "error-discrimination": {
      "strategy": "status-code",
    },
    "headers": {
      "X_SUPERAGENT_API_KEY": {
        "env": undefined,
        "name": "xSuperagentApiKey",
        "type": "string",
      },
    },
    "name": "api",
  },
}
`;

exports[`open api parser superagent simple 1`] = `
{
  "definitionFiles": {
    "agent.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "createAgent": {
            "auth": true,
            "display-name": "Create Agent",
            "docs": "Create a new agent",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "request": {
                  "name": "name",
                  "type": "type",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/api/v1/agents",
            "request": {
              "body": {
                "properties": {
                  "documentId": "optional<string>",
                  "has_memory": {
                    "default": false,
                    "type": "optional<boolean>",
                  },
                  "llm": "optional<map<string, unknown>>",
                  "name": "string",
                  "promptId": "optional<string>",
                  "toolId": "optional<string>",
                  "type": "string",
                },
              },
              "headers": undefined,
              "name": "Agent",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "deleteAgent": {
            "auth": true,
            "display-name": "Delete Agent",
            "docs": "Delete a specific agent",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "agentId": "agentId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "DELETE",
            "pagination": undefined,
            "path": "/api/v1/agents/{agentId}",
            "path-parameters": {
              "agentId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "getAgent": {
            "auth": true,
            "display-name": "Get Agent",
            "docs": "Get a specific agent",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "agentId": "agentId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/agents/{agentId}",
            "path-parameters": {
              "agentId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "listAllAgents": {
            "auth": true,
            "display-name": "List All Agents",
            "docs": "List all agents",
            "examples": [
              {
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/agents",
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "patchAgent": {
            "auth": true,
            "display-name": "Patch Agent",
            "docs": "Patch a specific agent",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "agentId": "agentId",
                },
                "request": {
                  "key": "value",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "PATCH",
            "pagination": undefined,
            "path": "/api/v1/agents/{agentId}",
            "path-parameters": {
              "agentId": "string",
            },
            "request": {
              "body": "map<string, unknown>",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "promptAgent": {
            "auth": true,
            "display-name": "Prompt Agent",
            "docs": "Invoke a specific agent",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "agentId": "agentId",
                },
                "request": {
                  "input": {
                    "key": "value",
                  },
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/api/v1/agents/{agentId}/predict",
            "path-parameters": {
              "agentId": "string",
            },
            "request": {
              "body": {
                "properties": {
                  "has_streaming": {
                    "default": false,
                    "type": "optional<boolean>",
                  },
                  "input": "map<string, unknown>",
                },
              },
              "headers": undefined,
              "name": "PredictAgent",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
        },
      },
    },
    "apiToken.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "createApiToken": {
            "auth": true,
            "display-name": "Create Api Token",
            "docs": "Create a new API token",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "request": {
                  "description": "description",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/api/v1/api-tokens",
            "request": {
              "body": {
                "properties": {
                  "description": "string",
                },
              },
              "headers": undefined,
              "name": "ApiToken",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "deleteApiToken": {
            "auth": true,
            "display-name": "Delete Api Token",
            "docs": "Delete a specific API token",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "tokenId": "tokenId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "DELETE",
            "pagination": undefined,
            "path": "/api/v1/api-tokens/{tokenId}",
            "path-parameters": {
              "tokenId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "getApiToken": {
            "auth": true,
            "display-name": "Get Api Token",
            "docs": "Get a specific API token",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "tokenId": "tokenId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/api-tokens/{tokenId}",
            "path-parameters": {
              "tokenId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "listApiTokens": {
            "auth": true,
            "display-name": "List Api Tokens",
            "docs": "List all API tokens",
            "examples": [
              {
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/api-tokens",
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
        },
      },
    },
    "auth.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "signIn": {
            "auth": false,
            "display-name": "Sign In",
            "docs": undefined,
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "request": {
                  "email": "email",
                  "password": "password",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/api/v1/auth/sign-in",
            "request": {
              "body": {
                "properties": {
                  "email": "string",
                  "password": "string",
                },
              },
              "headers": undefined,
              "name": "SignIn",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "signUp": {
            "auth": false,
            "display-name": "Sign Up",
            "docs": undefined,
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "request": {
                  "email": "email",
                  "password": "password",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/api/v1/auth/sign-up",
            "request": {
              "body": {
                "properties": {
                  "email": "string",
                  "metadata": "optional<map<string, unknown>>",
                  "name": "optional<string>",
                  "password": "string",
                },
              },
              "headers": undefined,
              "name": "SignUp",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
        },
      },
    },
    "documents.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "createDocument": {
            "auth": true,
            "display-name": "Create Document",
            "docs": "Create a new document",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "request": {
                  "name": "name",
                  "type": "type",
                  "url": "url",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/api/v1/documents",
            "request": {
              "body": {
                "properties": {
                  "authorization": "optional<map<string, unknown>>",
                  "from_page": {
                    "default": [
                      1,
                    ],
                    "type": "optional<integer>",
                  },
                  "name": "string",
                  "splitter": "optional<map<string, unknown>>",
                  "to_page": "optional<integer>",
                  "type": "string",
                  "url": "string",
                },
              },
              "headers": undefined,
              "name": "Document",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "deleteDocument": {
            "auth": true,
            "display-name": "Delete Document",
            "docs": "Delete a specific document",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "documentId": "documentId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "DELETE",
            "pagination": undefined,
            "path": "/api/v1/documents/{documentId}",
            "path-parameters": {
              "documentId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "getDocument": {
            "auth": true,
            "display-name": "Get Document",
            "docs": "Get a specific document",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "documentId": "documentId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/documents/{documentId}",
            "path-parameters": {
              "documentId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "listDocuments": {
            "auth": true,
            "display-name": "List Documents",
            "docs": "List all documents",
            "examples": [
              {
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/documents",
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
        },
      },
    },
    "prompts.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "createAPrompt": {
            "auth": true,
            "display-name": "Create A Prompt",
            "docs": "Create a new prompt",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "request": {
                  "input_variables": [],
                  "name": "name",
                  "template": "template",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/api/v1/prompts",
            "request": {
              "body": {
                "properties": {
                  "input_variables": "list<unknown>",
                  "name": "string",
                  "template": "string",
                },
              },
              "headers": undefined,
              "name": "Prompt",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "deletePrompt": {
            "auth": true,
            "display-name": "Delete Prompt",
            "docs": "Delete a specific prompt",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "promptId": "promptId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "DELETE",
            "pagination": undefined,
            "path": "/api/v1/prompts/{promptId}",
            "path-parameters": {
              "promptId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "getPrompt": {
            "auth": true,
            "display-name": "Get Prompt",
            "docs": "Get a specific prompt",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "promptId": "promptId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/prompts/{promptId}",
            "path-parameters": {
              "promptId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "listPrompts": {
            "auth": true,
            "display-name": "List Prompts",
            "docs": "List all prompts",
            "examples": [
              {
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/prompts",
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "patchPrompt": {
            "auth": true,
            "display-name": "Patch Prompt",
            "docs": "Patch a specific prompt",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "promptId": "promptId",
                },
                "request": {
                  "key": "value",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "PATCH",
            "pagination": undefined,
            "path": "/api/v1/prompts/{promptId}",
            "path-parameters": {
              "promptId": "string",
            },
            "request": {
              "body": "map<string, unknown>",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
        },
      },
    },
    "tools.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "createATool": {
            "auth": true,
            "display-name": "Create A Tool",
            "docs": "Create a new tool",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "request": {
                  "name": "name",
                  "type": "type",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "POST",
            "pagination": undefined,
            "path": "/api/v1/tools",
            "request": {
              "body": {
                "properties": {
                  "authorization": "optional<map<string, unknown>>",
                  "name": "string",
                  "type": "string",
                },
              },
              "headers": undefined,
              "name": "Tool",
              "query-parameters": undefined,
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "deleteTool": {
            "auth": true,
            "display-name": "Delete Tool",
            "docs": "Delete a specific tool",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "toolId": "toolId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "DELETE",
            "pagination": undefined,
            "path": "/api/v1/tools/{toolId}",
            "path-parameters": {
              "toolId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "getTool": {
            "auth": true,
            "display-name": "Get Tool",
            "docs": "Get a specific tool",
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "toolId": "toolId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/tools/{toolId}",
            "path-parameters": {
              "toolId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "listTools": {
            "auth": true,
            "display-name": "List Tools",
            "docs": "List all tools",
            "examples": [
              {
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/tools",
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
        },
      },
    },
    "traces.yml": {
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "listAgentTraces": {
            "auth": true,
            "display-name": "List Agent Traces",
            "docs": "List all agent traces",
            "examples": [
              {
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/traces",
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
        },
      },
    },
    "user.yml": {
      "imports": {
        "root": "__package__.yml",
      },
      "service": {
        "auth": false,
        "base-path": "",
        "endpoints": {
          "readUser": {
            "auth": false,
            "display-name": "Read User",
            "docs": undefined,
            "errors": [
              "root.UnprocessableEntityError",
            ],
            "examples": [
              {
                "path-parameters": {
                  "userId": "userId",
                },
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/users/{userId}",
            "path-parameters": {
              "userId": "string",
            },
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
          "readUserMe": {
            "auth": true,
            "display-name": "Read User Me",
            "docs": undefined,
            "examples": [
              {
                "response": {
                  "body": {
                    "key": "value",
                  },
                },
              },
            ],
            "method": "GET",
            "pagination": undefined,
            "path": "/api/v1/users/me",
            "response": {
              "docs": "Successful Response",
              "type": "unknown",
            },
          },
        },
      },
    },
  },
  "packageMarkerFile": {
    "errors": {
      "UnprocessableEntityError": {
        "docs": "Validation Error",
        "status-code": 422,
        "type": "HTTPValidationError",
      },
    },
    "types": {
      "HTTPValidationError": {
        "docs": undefined,
        "properties": {
          "detail": "optional<list<ValidationError>>",
        },
      },
      "ValidationError": {
        "docs": undefined,
        "properties": {
          "loc": "list<ValidationErrorLocItem>",
          "msg": "string",
          "type": "string",
        },
      },
      "ValidationErrorLocItem": {
        "discriminated": false,
        "docs": undefined,
        "union": [
          "string",
          "integer",
        ],
      },
    },
  },
  "rootApiFile": {
    "auth": "BearerAuthScheme",
    "auth-schemes": {
      "BearerAuthScheme": {
        "scheme": "bearer",
      },
    },
    "display-name": "Superagent",
    "error-discrimination": {
      "strategy": "status-code",
    },
    "headers": {
      "X_SUPERAGENT_API_KEY": {
        "env": undefined,
        "name": "xSuperagentApiKey",
        "type": "string",
      },
    },
    "name": "api",
  },
}
`;
